--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -34,7 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  image_picker: ^1.0.7
+  go_router: ^14.7.2
+  lottie: ^3.3.1
+  app_links: ^3.4.3
+  url_launcher: ^6.1.14
+  flutter_local_notifications: ^19.0.0
+  flutter_timezone: ^4.1.0
+  introduction_screen: ^3.1.4
+  shared_preferences: ^2.2.2
+  
 
 dev_dependencies:
   flutter_test:
