--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -52,6 +52,9 @@ dev_dependencies:
   logger: ^2.5.0
   tutorial_coach_mark: ^1.2.12
   flutter_launcher_icons: ^0.14.3
+  build_runner: ^2.4.6
+  json_serializable: ^6.6.1
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
