--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_timezone: ^4.1.0
   introduction_screen: ^3.1.4
   shared_preferences: ^2.2.2
+  speech_to_text: ^6.3.0
   
 
 dev_dependencies:
