--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   introduction_screen: ^3.1.4
   shared_preferences: ^2.2.2
   speech_to_text: ^6.3.0
+  flutter_slidable: ^3.0.0
   
 
 dev_dependencies:
