--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.2.2
   speech_to_text: ^6.3.0
   flutter_slidable: ^3.0.0
+  camera: ^0.11.2
   
 
 dev_dependencies:
