--- a/herbaplant/pubspec.yaml
+++ b/herbaplant/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   speech_to_text: ^6.3.0
   flutter_slidable: ^3.0.0
   camera: ^0.11.2
+  path_provider: ^2.1.5
   
 
 dev_dependencies:
