--- a/herbaplant/android/gradle.properties
+++ b/herbaplant/android/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
-org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.15.6-hotspot
+# org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.15.6-hotspot # gradle of Keil
+# org.gradle.java.home=C:\Program Files\Eclipse Adoptium\jdk-11.0.28.6-hotspot # gradle of Jas
 android.useAndroidX=true
 android.enableJetifier=true
